--- a/global/style.css
+++ b/global/style.css
@@ -14,6 +14,75 @@
     width: 344px;
 }
 
+header {
+    nav {
+        .menu-right {
+            display: flex;
+            align-items: center;
+            justify-content: end;
+        }
+    }
+  }
+  .dark-mode-toggle {
+      position: relative;
+      display: inline-block;
+      width: 60px;
+      height: 34px;
+    }
+    
+    .dark-mode-toggle input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+    
+    .dark-mode-toggle label {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      border-radius: 30px;
+      transition: background-color 0.3s;
+    }
+    
+    .dark-mode-toggle label:before {
+      position: absolute;
+      content: "";
+      height: 26px;
+      width: 26px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      border-radius: 50%;
+      transition: transform 0.3s;
+    }
+    
+    .dark-mode-toggle input:checked + label {
+      background-color: #251044;
+    }
+    
+    .dark-mode-toggle input:checked + label:before {
+      transform: translateX(26px);
+    }
+    
+    li a {
+      text-decoration: none;
+      color: var(--text-color);
+      &:hover {
+        color: #251044;
+      }
+    }
+  
+    li {
+      align-items: center;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
 body {
     font-family:'Lucida Sans';
     padding: 36px;
