--- a/global/style.css
+++ b/global/style.css
@@ -1,3 +1,4 @@
+/* ------------ estilização utilizada para todas as páginas ------------ */
 :root {
     --cor-primaria: #8162d4;
     --cor-secundaria: #927ae7;
@@ -5,38 +6,48 @@
     --text-color: white;
 }
 
+/* background tela inicial */
 .bg-gradiente {
     background-image: linear-gradient(to right, #4B2C7B, #5D349E, #6F42C1, #9985d1);
     color: var(--text-color);   
 }
 
-.img-home {
-    width: 344px;
+/* background sistema mode light */
+.bg-gradiente-light {
+  background-image: linear-gradient(to left, #8162D4, #927AE7, #A398F9, #ffffff);
+  color: var(--text-color);   
 }
 
+/* background sistema mode dark */
+.bg-gradiente-dark {
+  background-image: linear-gradient(to left, #220a46, #3a205e, #4d3177, #a275e6);
+  color: var(--text-color);   
+}
+
+/* estilo para o header padrão */
 header {
-    nav {
-        .menu-right {
-            display: flex;
-            align-items: center;
-            justify-content: end;
-        }
+  nav {
+    .menu-right {
+        display: flex;
+        align-items: center;
+        justify-content: end;
     }
   }
+
+  /* toggle do modo dark */
   .dark-mode-toggle {
-      position: relative;
-      display: inline-block;
-      width: 60px;
-      height: 34px;
-    }
-    
-    .dark-mode-toggle input {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+
+    input {
       opacity: 0;
       width: 0;
       height: 0;
     }
     
-    .dark-mode-toggle label {
+    label {
       position: absolute;
       cursor: pointer;
       top: 0;
@@ -48,7 +59,7 @@ header {
       transition: background-color 0.3s;
     }
     
-    .dark-mode-toggle label:before {
+    label:before {
       position: absolute;
       content: "";
       height: 26px;
@@ -60,72 +71,132 @@ header {
       transition: transform 0.3s;
     }
     
-    .dark-mode-toggle input:checked + label {
+    input:checked + label {
       background-color: #251044;
     }
     
-    .dark-mode-toggle input:checked + label:before {
+    input:checked + label:before {
       transform: translateX(26px);
     }
-    
-    li a {
-      text-decoration: none;
-      color: var(--text-color);
-      &:hover {
-        color: #251044;
-      }
-    }
-  
+
     li {
       align-items: center;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+      
+      a {
+        text-decoration: none;
+        color: var(--text-color);
+        &:hover {
+          color: #251044;
+        }
+      }
     }
-
-body {
-    font-family:'Lucida Sans';
-    padding: 36px;
-    width: 800px;
-    height: 560px;
-
-    h1 {
-        font-size: 70px;
-    }
-
-    .row {
-        padding-top: 20px;
-    }
-
-    .align-div {
-        align-items: center;
-        display: grid;
-    }
+  } 
 }
 
-a {
-    text-decoration: none;
+/* ------------ estilização da página index.html ------------ */
+#logo-index {
+  width: 344px;
 }
 
-.bg-btn-out {
+/* personalização dos botões */
+/* botão sem preenchimento e com bordas brancas */
+#bg-btn-out {
     border: var(--text-color) solid 1px;
     border-radius: 30px;
     
     a {
         color: var(--text-color);
+        text-decoration: none;
     } 
 }
 
-.bg-btn-white {
+/* botão branco */
+#bg-btn-white {
     background-color: var(--text-color);
     border-radius: 30px;
     a {
         color: var(--cor-primaria);
+        text-decoration: none;
     }
 }
 
-.btn-gpm {
+/* alinhamento dos botões */
+#btn-gpm {
     gap: 15px;
     display: flex;
     flex-direction: column;
+}
+
+.pd-body{
+  padding-top: 6px;
+  padding-left: 36px;
+  padding-right: 36px;
+}
+
+body{
+  font-family: 'Alice';
+  width: 800px;
+  height: 560px;
+
+  h1 {
+      font-size: 70px;
+  }
+
+  .row {
+      padding-top: 20px;
+  }
+
+  .align-div {
+      align-items: center;
+      display: grid;
+  }
+}
+
+.navbar{
+  background-color: white;
+  height: 38px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 6px;
+  padding-right: 6px;
+  
+
+  .logo-icon{
+    color: black;
+  }
+
+  #menu{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: end;
+    gap: 6px;
+  
+    .item{
+      width: 26px;
+      height: 26px;
+      color: black;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    img{
+      width: 22px;
+      height: 22px;
+    }
+  }
+}
+
+.selector {
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
