--- a/tipo-certificado/tipo-certificado.css
+++ b/tipo-certificado/tipo-certificado.css
@@ -106,18 +106,27 @@ body{
     width: 100%;
     height: 60px;
     font-size: 25px;
-    color: var(--text-color);
     border: var(--text-color) solid 3px;
     border-radius: 30px;
-    background-color:#6F42C1;
+    background-color:var(--cor-primaria);
     font-weight: bold;      
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); 
+}
+
+.next-btn.enabled {
+  font-weight: normal;  
+  box-shadow: none;
 }
 
 .next-btn:disabled {
     background-color: transparent;
     color: rgba(247, 244, 244, 0.792); 
     border-color: rgba(255, 255, 255, 0.5); 
+}
+
+.next-btn a {
+  color: var(--text-color);
+  text-decoration: none;
 }
 
 .required {
@@ -262,12 +271,14 @@ body{
   position: absolute;
   top: 2px;
   right: 0;
+  z-index: -1;
 }
 
 .nuvem-e{
   position: absolute;
   top: 36px;
   left: 0;
+  z-index: -1;
 }
 
 .nuvem-es{
