--- a/tipo-certificado/tipo-certificado.css
+++ b/tipo-certificado/tipo-certificado.css
@@ -2,13 +2,13 @@
 
 
 body{
-   font-family: 'Alice';
-   width: auto;
-   height: 650px;
+  font-family: 'Alice';
+  width: auto;
+  height: 650px;
 }
 
 .text-align-center {
-    text-align: center;
+  text-align: center;
 }
 
 .bg-gradiente {
@@ -56,72 +56,73 @@ body{
 }
 
 .nav-style {
-    font-family: 'Alice';
-    color:white ;
-    background-color:#6F42C1; 
-    padding: 8px 8px;
-    box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.5);
+  font-family: 'Alice';
+  color:white ;
+  background-color:#6F42C1; 
+  padding: 8px 8px;
+  box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.5);
 }
 
 .tx-color-white {
-    color: white; 
-    text-decoration: none;
-    font-size: 1.5em;
-    transition: font-size 0.3s, text-decoration 0.3s;
+  color: white; 
+  text-decoration: none;
+  font-size: 1.5em;
+  transition: font-size 0.3s, text-decoration 0.3s;
 }
 
 .tx-color-white:hover,
 .tx-color-white:focus,
 .tx-color-white:active {
-    color: white;
-    text-decoration: underline;
-    font-size: 1.6em;
+  color: white;
+  text-decoration: underline;
+  font-size: 1.6em;
 }
 
 .size-logo {
-    width: 150px;
-    margin-top: 3px;
+  width: 150px;
+  margin-top: 3px;
 }
 
 .title {
-    width: 390px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 45px;
-    font-size: 1.5em;
-    font-family: 'Alice';
+  width: 390px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 45px;
+  font-size: 1.5em;
+  font-family: 'Alice';
 }
 
 .terms-link {
-    font-family: 'Alice';
-    font-size: medium;
+  font-family: 'Alice';
+  font-size: medium;
 }
 
 .custom-mt {
-    margin-top: -10%;
+  margin-top: -10%;
 }
 
 .next-btn{
-    font-family: 'Open Sans', sans-serif;   
-    width: 100%;
-    height: 60px;
-    font-size: 25px;
-    border: var(--text-color) solid 3px;
-    border-radius: 30px;
-    background-color:var(--cor-primaria);
-    font-weight: bold;      
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); 
+  font-family: 'Open Sans', sans-serif;   
+  width: 100%;
+  height: 60px;
+  font-size: 25px;
+  border: var(--text-color) solid 3px;
+  border-radius: 30px;
+  background-color:var(--cor-primaria);
+  font-weight: bold;      
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); 
 }
 
 .next-btn.enabled {
   font-weight: normal;  
   box-shadow: none;
+  color: var(--text-color);
 }
 
 .next-btn:disabled {
-    background-color: transparent;
-    color: rgba(247, 244, 244, 0.792); 
-    border-color: rgba(255, 255, 255, 0.5); 
+  background-color: transparent;
+  color: rgba(247, 244, 244, 0.792); 
+  border-color: rgba(255, 255, 255, 0.5); 
 }
 
 .next-btn a {
@@ -130,8 +131,8 @@ body{
 }
 
 .required {
-    color: red;
-    margin-left: 7px;
+  color: red;
+  margin-left: 7px;
 }
 
 .center {
@@ -233,16 +234,16 @@ body{
 }
 
 .itens-forms {
-    display: flex;
-    align-items: center; 
+  display: flex;
+  align-items: center; 
 }
 
 .itens-forms input[type="checkbox"] {
-    margin-right: 15px;
+  margin-right: 15px;
 }
 
 .margin{
-    margin-top: 11%;
+  margin-top: 11%;
 }
 
 .img{
