--- a/upload/upload.css
+++ b/upload/upload.css
@@ -191,3 +191,66 @@ body{
   font-size: 20px;
   margin-right: 40px;
 }
+
+
+
+
+.container {
+  width: 293.73px;
+}
+
+.barra {
+  width: 100%;
+  height: 45px;
+  background-color: #6f42c1;
+  display: flex;
+  align-items: center;
+  padding: 0 10px;
+  box-sizing: border-box;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+}
+
+.icone {
+  width: 60px;
+  height: 30px;
+
+  margin-right: 32px;
+  margin-left: 10px;
+}
+
+.mensagem {
+  width: 349px;
+  height: 24px;
+  font-family: 'Inter', sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+}
+.caixa-branca {
+  width: 100%;
+  height: 80px;
+  background-color: #ffffff;
+  padding: 15px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+}
+
+.entrada-senha {
+  width: 395px;
+  height: 35px;
+  background-color: #ebebeb;
+  border: none;
+  padding: 5px;
+  box-sizing: border-box;
+  text-align: center;
+}
+
+
