--- a/upload/upload.css
+++ b/upload/upload.css
@@ -17,21 +17,22 @@ body{
 
   .docs-area {
     width: 66%;
-    height: 300px;
+    height: 210px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     border-style: dashed;
-    border-color: #3b196d;
+    border-color: var(--text-color-dark);
     border-width: 2px;
     background-color: var(--cor-terciaria);
     border-radius: 5px;
-    margin: 38px 17%;
+    margin: 38px 16%;
 
     .icon-upload {
       display: flex;
       align-items: center;
       justify-content: center;
+      flex-direction: column;
 
       img {
         width: 60px;
@@ -43,7 +44,7 @@ body{
       }
     }
 
-    .upload-button{
+    /* .upload-button{
       width: 30%;
       height: 50px;
       font-size: 17px;
@@ -51,7 +52,7 @@ body{
       color: var(--text-color);
       border-radius: 30px;
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    }
+    } */
 
     h4 {
       text-align: center;
@@ -59,8 +60,8 @@ body{
     }
 
     .icon-upload .sizeFile {
-      width: 130px;
-      margin-right: 15px;
+      width: 60px;
+      margin-right: 10px;
       height: auto;
       display: none;
       margin-bottom: 10%;
@@ -68,14 +69,9 @@ body{
 
   }
 
-  .password-form {
-    width: 294px;
-    height: 13px;
-    }
-
 
 .bg-gradiente {
-  background: linear-gradient(to bottom left, #A398F9 22%, #927AE7 33%, #8162D4 51%,#927AE7 77%, #947EE9 88%);
+  background-image: linear-gradient(to left, #8162D4, #927AE7, #A398F9, #ffffff);
   position: relative;
   z-index: 1;
   margin-bottom: 25px;
@@ -147,13 +143,11 @@ body{
   font-size: 25px;
   border: var(--text-color) solid 3px;
   border-radius: 30px;
-  background-color:var(--cor-primaria);
-  font-weight: bold;      
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); 
+  background-color:var(--cor-primaria);   
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); 
 }
 
-.btn-convert.enabled {
-  font-weight: normal;  
+.btn-convert.enabled { 
   box-shadow: none;
   color: var(--text-color);
   margin-top: 60px;
@@ -163,8 +157,8 @@ body{
 
 .btn-convert:disabled {
   background-color: transparent;
-  color: rgba(247, 244, 244, 0.792); 
-  border-color: rgba(255, 255, 255, 0.5);
+  color: rgb(255, 255, 255); 
+  border-color: rgb(255, 255, 255);
   margin-top: 60px;
   margin-left: 0%;
   z-index: -1;
@@ -173,18 +167,15 @@ body{
 .fonte{
   font-family: 'Alice';
   font-size: 20px;
-  color: black;
+  color: var(--text-color-dark);
 }
 
 #span1, #span2 {
   font-family: 'Alice';
-  color: black;
+  color: var(--text-color-dark);
   font-size: 20px;
   margin-right: 40px;
 }
-
-
-
 
 .container {
   width: 293.73px;
@@ -193,7 +184,7 @@ body{
 .barra {
   width: 100%;
   height: 45px;
-  background-color: #6f42c1;
+  background-color: transparent;
   display: flex;
   align-items: center;
   padding: 0 10px;
@@ -205,13 +196,12 @@ body{
 .icone {
   width: 60px;
   height: 30px;
-
   margin-right: 32px;
   margin-left: 10px;
 }
 
 .mensagem {
-  width: 349px;
+  width: 425px;
   height: 24px;
   font-family: 'Inter', sans-serif;
   font-size: 18px;
@@ -219,7 +209,9 @@ body{
   color: #ffffff;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
+
 .caixa-branca {
   width: 100%;
   height: 80px;
@@ -230,8 +222,6 @@ body{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
 }
 
 .entrada-senha {
@@ -244,11 +234,8 @@ body{
   text-align: center;
 }
 
-
-
-
 #convert {
-  margin-top: 70px;
+  margin-top: 32px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -256,7 +243,7 @@ body{
 
 .custom-button { 
   color: #ffffff; 
-  padding: 10px 20px; 
+  padding: 10px 10px; 
   transition: background-color 0.3s, color 0.3s; 
 }
 
