--- a/upload/upload.css
+++ b/upload/upload.css
@@ -22,7 +22,6 @@ body{
     
 }
 
-
 .container-fluid {
   padding: 20px;
   display: flex;
@@ -35,7 +34,30 @@ body{
     color: white;
     text-align: center;
   }
+
+  .line-button {
+    width: 100%;
+    height: auto;
+    padding-top: 23px;
+    margin-bottom: -25px;
+    margin-right: 344px;
+    display: flex;
+    justify-content: end;
+
+    .clean-page-btn {
+      display: none;
+      background-color: rgb(36, 151, 218);
+      color: #ffffff;
+      border-radius: 10px;
+      border: none;
+      font-family: Alice;
+      font-size: large;
+      width: 160px;
+      height: 44px;
+    }
   }
+
+  
 
   .docs-area {
     width: 66%;
@@ -50,41 +72,47 @@ body{
     border-radius: 5px;
     margin: 38px 16%;
 
-    .drop-area {
+    .drop-area, 
+    .drop-area-text, 
+    .img-upload,
+    .title-area {
       display: flex;
       align-items: center;
       justify-content: center;
+      flex-direction: column;
     }
 
     .icon-upload {
       display: flex;
       align-items: center;
-      justify-content: center;
-      flex-direction: column;
+      flex-direction: row;
+      gap: 28px;
+}
 
-      img {
+      /* Titulos dos documentos */
+      .title-docs{
+        font-family: 'Alice';
+        color: var(--text-color-dark);
+        font-size: 20px;
+      }
+
+      /* Icones dos documentos */
+      .sizeFile {
         width: 60px;
         height: 60px;
+        display: none;
+        margin-bottom: 10%;
+        flex-direction: column;
+        justify-content:center;
+      }
+
+      .document-itens {
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin: 5px auto 0px auto;
       }
-    }
-
-    /* Icones dos documentos */
-    .icon-upload .sizeFile {
-      width: 60px;
-      margin-right: 10px;
-      height: auto;
-      display: none;
-      margin-bottom: 10%;
-      flex-direction: row;
-      justify-content:baseline;
-      
-      #img1, img2 {
-        display: block;
-      }
+ 
     }
 
   }
@@ -174,12 +202,7 @@ body{
   color: var(--text-color-dark);
 }
 
-#span1, #span2 {
-  font-family: 'Alice';
-  color: var(--text-color-dark);
-  font-size: 20px;
-  margin-right: 40px;
-}
+
 
 .container {
   width: 293.73px;
